--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,13 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
+
+#forge and minecraft versions
+minecraft_version=1.19.2
+forge_version=43.2.6
+
+# Mod Properties
+mod_version = 1.0.0-1.19.2
+maven_group = com.mystic
+archives_base_name = coloration
